# beancount-language-server

./: .cz.toml  .gitattributes  .gitignore  .gitmodules  .release-please-manifest.json  .vscodeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.py  cliff.toml  codecov.yml  cog.toml  deny.toml  dist-manifest.json  dist-workspace.toml  flake.nix  jest.config.js  jest.config.json  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  rust-toolchain.toml  rustfmt.toml  setup.py  shell.nix  tree-sitter-beancount.wasm  tsconfig.eslint.json  tsconfig.json  tsconfig.packages.json  tslint.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  bump_version_dev.yml  check.yml  ci.yml  cicd.yml  clippy.yml  codeql-analysis.yml  dependabot-automerge.yml  look-ahead.yml  npm_publish.yml  pr-lints.yml  python-wrapper-build.yml  release-vscode.yml  release.yml  test.yml  vscode.yml
beancount_language_server/: cli.py  server.py  util.py
beancount_language_server/parser/: nodes.py  parser.py  state.py  treesitter.py
client/src/: extension.ts
crates/lsp/: CHANGELOG.md  Cargo.toml
crates/lsp/benches/: beancount_data.rs  checker_performance.rs  completion_performance.rs  didchange_performance.rs
crates/lsp/src/: beancount_data.rs  capabilities.rs  cli.rs  config.rs  core.rs  dispatcher.rs  document.rs  document_store.rs  error.rs  forest.rs  handlers.rs  lib.rs  lsp_ext.rs  main.rs  progress.rs  providers.rs  query_cache.rs  query_utils.rs  server.rs  session.rs  test_utils.rs  treesitter_utils.rs  utils.rs
crates/lsp/src/checkers/: mod.rs  pyo3_embedded.rs  pyo3_embedded_stub.rs  python_checker.rs  system_call.rs  types.rs
crates/lsp/src/core/: beancount_data.rs  document.rs  error.rs  logger.rs  rope.rs  session.rs  text_edit.rs
crates/lsp/src/providers/: completion.rs  definition.rs  diagnostics.rs  document_symbol.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hints.rs  references.rs  semantic_tokens.rs  text_document.rs  uri.rs  workspace_symbol.rs
crates/lsp/src/providers/code_action/: mod.rs
crates/lsp/src/providers/completion/: context.rs  items.rs  mod.rs
crates/lsp/src/providers/formatting/: alignment.rs  extraction.rs  mod.rs
crates/lsp/tests/completion/: date_completion.rs  mod.rs
crates/pylsp/: Cargo.toml
crates/pylsp/src/: lib.rs
crates/tree-sitter-utils/: CHANGELOG.md  Cargo.toml
crates/tree-sitter-utils/src/: lib.rs  lsp_utils.rs  node.rs
docs/: brownfield-architecture.md  completion-system.md  prd.md
docs/agents/: domain.md  triage-labels.md
editor/code/: .eslintrc.js  CHANGELOG.md  LICENSE  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml
editor/code/src/: config.ts  download.ts  extension.ts  semantic_tokens.ts  util.ts
python/beancount_language_server/: __init__.py  __main__.py  _beancount_lsp.pyi  wrapper.py
server/: CHANGELOG.md  README.md  package.json  tsconfig.json
server/python/: bean_check.py
server/src/: diagnostics.ts  index.ts  parser.ts  server.ts  utils.ts
src/: cli.ts  core.rs  forest.ts  handlers.rs  lsp-connection.ts  lsp-server.ts  main.rs  parser.ts  providers.rs  server.rs  server.ts  tree-sitter.ts
src/core/: beancount_data.rs  document.rs  error.rs  logger.rs  rope.rs  session.rs  text_edit.rs
src/providers/: astProvider.ts  beanCheckProvider.ts  completion.rs  completionProvider.ts  diagnostics.rs  documentFormattingProvider.ts  formatting.rs
src/typings/web-tree-sitter/: index.d.ts
src/utils/: positionUtils.ts  settings.ts  treesitterUtils.ts
tests/: completion.test.ts  formatting.test.ts  jest.setup.ts  lsp-didOpen.test.ts  lsp-didSave.test.ts  lsp-formating.test.ts  mocks.ts
tests/fixtures/: simple_error.beancount  simple_include.beancount
tests/utils/: sourceParser.ts
vscode/: .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  README.md  eslint.config.js  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json
vscode/scripts/: fetch_server_binaries.py  package-all.mjs
vscode/src/: config.ts  extension.ts  persistent_state.ts  semantic_tokens.ts  util.ts
