[workspace]
members = [
    "crates/lsp",
]
resolver = "2"

[workspace.package]
version = "1.4.1"
edition = "2021"
rust-version = "1.75.0"

[workspace.dependencies]
# Core functionality
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

# LSP and server functionality
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Text processing
ropey = "1.6"
regex = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
insta = { version = "1.0", features = ["yaml"] }

[workspace.metadata.crane]
name = "beancount-language-server-workspace"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.0"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.82.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "loongarch64-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
