[workspace]
members = [
    "crates/lsp",
]
resolver = "2"

[workspace.package]
version = "1.9.1"
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
# Core functionality
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"

# LSP and server functionality
lsp-server = "=0.7.9" # Pinned due to Dependabot updater bug
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Text processing
ropey = "1.6"
regex = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
insta = { version = "1.46", features = ["yaml"] }

[workspace.metadata.crane]
name = "beancount-language-server-workspace"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
