[tool.poetry]
name = "beancount-language-server"
version = "0.1.0"
description = "A LSP server for beancount"
authors = ["Brian Ryall <bryall@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bryall/beancount-language-server"
repository = "https://github.com/bryall/beancount-language-server"
keywords = [
  "python",
  "completion",
  "refactoring",
  "vim",
  "neovim",
  "lsp",
  "language-server-protocol",
  "beancount"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
  "Topic :: Utilities",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Typing :: Typed",
]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=7.0"
beancount = ">=2.2.3"
pygls = ">=0.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = {version = "^19.10b0", allow-prereleases = true}
pytest = "^5.0"

[tool.poetry.scripts]
beancount-language-server = 'beancount_language_server.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
