[package]
name = "beancount-language-server"
version = "1.3.6"
edition = "2021"
authors = ["Brian Ryall <polarmutex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/polarmutex/beancount-language-server"
keywords = ["beancount", "lsp"]
description = """
A language server for the beancount language
"""

[dependencies]
anyhow = "1.0"
bytes = "1.8"
chrono = { version = "0", default-features = false, features = ["clock"] }
clap = "4"
crossbeam-channel = "0.5.13"
dashmap = "6.1"
glob = "0.3"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
regex = "1"
ropey = "1.6"
thiserror = "2.0"
serde = "1.0"
serde_json = "1.0"
shellexpand = "3.0.0"
linked-list = "0.0.3"
tracing = "0.1.40"
tree-sitter = "0.22"
tree-sitter-beancount = "2"
#tree-sitter-beancount = {git = "https://github.com/polarmutex/tree-sitter-beancount.git", branch="devel"}
threadpool = "1.8.1"
url = "2"

[dependencies.tracing-subscriber]
version = "0.3.18"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[dev-dependencies]
env_logger = "0.11.5"
insta = { version = "1.41.1", features = ["yaml"] }
test-log = { version = "0.2.16", features = ["trace"] }

[package.metadata.release]
tag = true
