[package]
name = "beancount-language-server"
version = "1.3.8"
edition = "2024"
authors = ["Brian Ryall <polarmutex@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/polarmutex/beancount-language-server"
keywords = ["beancount", "lsp"]
description = """
A language server for the beancount language
"""

[dependencies]
anyhow = "1.0"
bytes = "1.10"
chrono = { version = "0", default-features = false, features = ["clock"] }
clap = "4"
crossbeam-channel = "0.5.15"
dashmap = "6.1"
glob = "0.3"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
regex = "1"
ropey = "1.6"
thiserror = "2.0"
serde = "1.0"
serde_json = "1.0"
shellexpand = "3.1.1"
linked-list = "0.1.0"
tracing = "0.1.41"
tree-sitter = "0.22.6"
tree-sitter-beancount = "2.3.3"
#tree-sitter-beancount = {git = "https://github.com/polarmutex/tree-sitter-beancount.git", branch="devel"}
threadpool = "1.8.1"
url = "2"

[dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["env-filter", "fmt", "smallvec", "std", "tracing-log"]

[dev-dependencies]
env_logger = "0.11.8"
insta = { version = "1.43.1", features = ["yaml"] }
test-log = { version = "0.2.18", features = ["trace"] }

[package.metadata.release]
tag = true
