[package]
name = "beancount-lsp-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

authors = ["Brian Ryall <polarmutex@users.noreply.github.com>"]
repository = "https://github.com/polarmutex/beancount-language-server"

[lib]
name = "_beancount_lsp"
crate-type = ["cdylib"]

[dependencies]
beancount-language-server = { path = "../lsp", default-features = false, features = ["python-embedded"] }
pyo3 = { version = "0.27", features = ["abi3-py38"] }
