[package]
authors = ["polarmutex"]
description = "utility functions for tree-sitter"
license = "MIT"
edition = "2021"
name = "beancount-language-server-treesitter-utils"
version = "0.1.0"
homepage = "https://github.com/polarmutex/beancount-language-server"
repository = "https://github.com/polarmutex/beancount-language-server"
keywords = ["lsp", "tree-sitter"]

[dependencies]
anyhow = "1.0.69"
lsp-types = "0.93.2"
ropey = "1.5"
tree-sitter = "0.20.9"
